--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "nodemon": "^3.1.4",
+    "rollup": "^3.29.4",
     "vite": "^5.3.4"
   }
 }
