--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "https://patrimoine-economique-backend.onrender.com",
   "scripts": {
     "server": "nodemon ../backend/server.js",
     "dev": "vite",
